# 3_Akinator

./: .gitignore  Akinator.cpp  Akinator_log.txt  Array.inl  CMakeLists.txt  Makefile  README.md  instructions.txt  list_class.cpp  main  main.cpp  test  test.cpp  tree.cpp
headers/: Array.h  list_class.h  tree.h
src/: Akinator.cpp  Debug.cpp  Tree.cpp  main.cpp
src/headers/: Akinator.hpp  Tree.hpp
